[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "ibidem"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
vectormath = "^0.2.2"
colorama = "^0.4.6"
requests = "^2.31.0"
networkx = "^3.2.1"
bitstruct = "^8.19.0"
alive-progress = "^3.1.5"
tqdm = "^4.66.1"
sympy = "^1.12"
bpython = "^0.24"
matplotlib = "^3.8.2"
geometry3d = "^0.2.4"
rich = "^13.7.0"

[tool.poetry.scripts]
aoc = "ibidem.advent_of_code.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-sugar = "^0.9.7"


[tool.poetry.group.aoctiles.dependencies]
pillow = "^10.1.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
