[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "ibidem"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
vectormath = "^0.2.2"
colorama = "^0.4.6"
requests = "^2.31.0"
networkx = "^3.2.1"
bitstruct = "^8.19.0"
alive-progress = "^3.1.5"
tqdm = "^4.66.1"
sympy = "^1.12"
bpython = "^0.24"
matplotlib = "^3.8.2"
geometry3d = "^0.3.0"
rich = "^14.0.0"
icecream = "^2.1.3"
scipy = "^1.11.4"
pygame = "^2.6.1"

[tool.poetry.scripts]
aoc = "ibidem.advent_of_code.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"


[tool.poetry.group.aoctiles.dependencies]
pillow = "^11.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
