[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" }]
requires-python = ">=3.11,<4"
readme = "README.rst"
license = "MIT"
dependencies = [
    "numpy>=2.0.0,<3",
    "vectormath>=0.2.2,<0.3",
    "colorama>=0.4.6,<0.5",
    "requests>=2.31.0,<3",
    "networkx>=3.2.1,<4",
    "bitstruct>=8.19.0,<9",
    "alive-progress>=3.1.5,<4",
    "tqdm>=4.66.1,<5",
    "sympy>=1.12,<2",
    "matplotlib>=3.8.2,<4",
    "geometry3d>=0.3.0,<0.4",
    "rich>=14.0.0,<15",
    "icecream>=2.1.3,<3",
    "scipy>=1.11.4,<2",
    "pygame-ce>=2.5.6,<3",
]

[project.scripts]
aoc = "ibidem.advent_of_code.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-xdist==3.8.0",
    "pytest-sugar==1.1.1",
    "ipython>=9.8.0,<10",
]
aoctiles = [
    "pillow>=12.0.0,<13",
    "requests>=2.31.0,<3",
    "pyyaml>=6.0.1,<7",
]

[tool.uv]
default-groups = [
    "dev",
    "aoctiles",
]

[tool.hatch.build.targets.sdist]
include = ["ibidem"]

[tool.hatch.build.targets.wheel]
include = ["ibidem"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
